netlify deploy issue

--- a/.svelte-kit/output/manifest.json
+++ b/.svelte-kit/output/manifest.json
@@ -1,10 +1,10 @@
 {
   ".svelte-kit/build/runtime/internal/start.js": {
-    "file": "start-562c6de2.js",
+    "file": "start-3f680d81.js",
     "src": ".svelte-kit/build/runtime/internal/start.js",
     "isEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
@@ -19,7 +19,7 @@
       "src/routes/fibonacci.svelte",
       "src/routes/listview/index.svelte",
       "src/routes/settings.svelte",
-      "_index-4f08dbf1.js",
+      "_index-a7e32281.js",
       "src/routes/apidemo/index.svelte",
       "src/routes/apidemo/[lastName].svelte",
       "src/routes/counter/index.svelte",
@@ -33,208 +33,211 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-9105860c.js",
+    "file": "pages/__layout.svelte-e07d7b58.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ],
     "css": [
       "assets/pages/__layout.svelte-7d55c0ac.css"
     ]
   },
   ".svelte-kit/build/components/error.svelte": {
-    "file": "error.svelte-3509a2d1.js",
+    "file": "error.svelte-19c23558.js",
     "src": ".svelte-kit/build/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-4387430a.js",
+    "file": "pages/index.svelte-e2a5864b.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ],
     "css": [
       "assets/pages/index.svelte-6a899900.css"
     ]
   },
   "src/routes/example-markdown.md": {
-    "file": "pages/example-markdown.md-05198031.js",
+    "file": "pages/example-markdown.md-cab4326d.js",
     "src": "src/routes/example-markdown.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ]
   },
   "src/routes/fibonaccidoc.md": {
-    "file": "pages/fibonaccidoc.md-499bdd49.js",
+    "file": "pages/fibonaccidoc.md-0c02f57a.js",
     "src": "src/routes/fibonaccidoc.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ]
   },
   "src/routes/particlerain.svelte": {
-    "file": "pages/particlerain.svelte-f9b824f0.js",
+    "file": "pages/particlerain.svelte-a9e6e2f2.js",
     "src": "src/routes/particlerain.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ],
     "css": [
       "assets/pages/particlerain.svelte-f46ffd44.css"
     ]
   },
   "src/routes/audioplayer/index.svelte": {
-    "file": "pages/audioplayer/index.svelte-9db364ca.js",
+    "file": "pages/audioplayer/index.svelte-f7869249.js",
     "src": "src/routes/audioplayer/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ],
     "css": [
       "assets/pages/audioplayer/index.svelte-60b66078.css"
     ]
   },
   "src/routes/listviewdoc.md": {
-    "file": "pages/listviewdoc.md-4ba8a50b.js",
+    "file": "pages/listviewdoc.md-4c52f2cd.js",
     "src": "src/routes/listviewdoc.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ]
   },
   "src/routes/covidstats/index.svelte": {
-    "file": "pages/covidstats/index.svelte-601de048.js",
+    "file": "pages/covidstats/index.svelte-3d90dc19.js",
     "src": "src/routes/covidstats/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js",
+      "_list-a9e31b5a.js"
     ],
     "css": [
-      "assets/pages/covidstats/index.svelte-45a94576.css"
+      "assets/pages/covidstats/index.svelte-eb0598ea.css"
     ]
   },
   "src/routes/fibonacci.svelte": {
-    "file": "pages/fibonacci.svelte-6b01c554.js",
+    "file": "pages/fibonacci.svelte-f448facd.js",
     "src": "src/routes/fibonacci.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ],
     "css": [
       "assets/pages/fibonacci.svelte-16b5df49.css"
     ]
   },
   "src/routes/listview/index.svelte": {
-    "file": "pages/listview/index.svelte-02e09ccb.js",
+    "file": "pages/listview/index.svelte-89231bbd.js",
     "src": "src/routes/listview/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js",
-      "_stores-b4081be3.js"
+      "_vendor-15d19e34.js",
+      "_list-a9e31b5a.js",
+      "_stores-78a7f08e.js"
     ],
     "css": [
-      "assets/pages/listview/index.svelte-7310ad12.css"
+      "assets/pages/listview/index.svelte-a212d4bf.css"
     ]
   },
   "src/routes/settings.svelte": {
-    "file": "pages/settings.svelte-74a62742.js",
+    "file": "pages/settings.svelte-9cbcec07.js",
     "src": "src/routes/settings.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ]
   },
   "src/routes/pattern.svelte": {
-    "file": "pages/pattern.svelte-66f9dc69.js",
+    "file": "pages/pattern.svelte-2f788637.js",
     "src": "src/routes/pattern.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ],
     "css": [
       "assets/pages/pattern.svelte-ec6175e4.css"
     ]
   },
   "src/routes/apidemo/index.svelte": {
-    "file": "pages/apidemo/index.svelte-6caa306f.js",
+    "file": "pages/apidemo/index.svelte-48fe60fa.js",
     "src": "src/routes/apidemo/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ],
     "css": [
       "assets/pages/apidemo/index.svelte-1ff651ee.css"
     ]
   },
   "src/routes/apidemo/[lastName].svelte": {
-    "file": "pages/apidemo/[lastName].svelte-a4ed1b7e.js",
+    "file": "pages/apidemo/[lastName].svelte-b9570562.js",
     "src": "src/routes/apidemo/[lastName].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ],
     "css": [
       "assets/pages/apidemo/[lastName].svelte-b1dad7d8.css"
     ]
   },
   "src/routes/counter/index.svelte": {
-    "file": "pages/counter/index.svelte-efa825a6.js",
+    "file": "pages/counter/index.svelte-244c6587.js",
     "src": "src/routes/counter/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js",
-      "_stores-b4081be3.js"
+      "_vendor-15d19e34.js",
+      "_stores-78a7f08e.js"
     ],
     "css": [
       "assets/pages/counter/index.svelte-dbcfad1d.css"
     ]
   },
   "src/routes/dynamic/index.svelte": {
-    "file": "pages/dynamic/index.svelte-b82a60b6.js",
+    "file": "pages/dynamic/index.svelte-26e4d33c.js",
     "src": "src/routes/dynamic/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ]
   },
   "src/routes/tabdemo/index.svelte": {
-    "file": "pages/tabdemo/index.svelte-aac44f64.js",
+    "file": "pages/tabdemo/index.svelte-fd4e9108.js",
     "src": "src/routes/tabdemo/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js",
-      "_index-4f08dbf1.js",
+      "_vendor-15d19e34.js",
+      "_index-a7e32281.js",
       "src/routes/listviewdoc.md",
       "src/routes/particlerain.svelte",
       "src/routes/fibonacci.svelte",
       "src/routes/covidstats/index.svelte",
       "src/routes/pattern.svelte",
       "src/routes/audioplayer/index.svelte",
-      "src/routes/example-markdown.md"
+      "src/routes/example-markdown.md",
+      "_list-a9e31b5a.js"
     ],
     "css": [
       "assets/pages/tabdemo/index.svelte-5920d885.css",
@@ -242,24 +245,24 @@
     ]
   },
   "src/routes/about.svelte": {
-    "file": "pages/about.svelte-c9ac7bfa.js",
+    "file": "pages/about.svelte-bff5dea8.js",
     "src": "src/routes/about.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
     ],
     "css": [
       "assets/about.svelte_svelte&type=style&lang-42f179f3.css"
     ]
   },
   "src/routes/treedemo/index.svelte": {
-    "file": "pages/treedemo/index.svelte-6c4eeb0d.js",
+    "file": "pages/treedemo/index.svelte-7e48b137.js",
     "src": "src/routes/treedemo/index.svelte",
     "isEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js",
-      "_index-4f08dbf1.js",
+      "_vendor-15d19e34.js",
+      "_index-a7e32281.js",
       "src/routes/particlerain.svelte",
       "src/routes/example-markdown.md",
       "src/routes/pattern.svelte",
@@ -270,20 +273,29 @@
       "assets/about.svelte_svelte&type=style&lang-42f179f3.css"
     ]
   },
-  "_vendor-6df07bd0.js": {
-    "file": "chunks/vendor-6df07bd0.js"
+  "_vendor-15d19e34.js": {
+    "file": "chunks/vendor-15d19e34.js"
   },
-  "_stores-b4081be3.js": {
-    "file": "chunks/stores-b4081be3.js",
+  "_list-a9e31b5a.js": {
+    "file": "chunks/list-a9e31b5a.js",
     "imports": [
-      "_vendor-6df07bd0.js"
+      "_vendor-15d19e34.js"
+    ],
+    "css": [
+      "assets/list-388239ef.css"
     ]
   },
-  "_index-4f08dbf1.js": {
-    "file": "chunks/index-4f08dbf1.js",
+  "_stores-78a7f08e.js": {
+    "file": "chunks/stores-78a7f08e.js",
+    "imports": [
+      "_vendor-15d19e34.js"
+    ]
+  },
+  "_index-a7e32281.js": {
+    "file": "chunks/index-a7e32281.js",
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-6df07bd0.js",
+      "_vendor-15d19e34.js",
       "src/routes/particlerain.svelte",
       "src/routes/example-markdown.md",
       "src/routes/pattern.svelte",
