--- a/.svelte-kit/output/manifest.json
+++ b/.svelte-kit/output/manifest.json
@@ -1,10 +1,10 @@
 {
   ".svelte-kit/build/runtime/internal/start.js": {
-    "file": "start-3f680d81.js",
+    "file": "start-c58bc032.js",
     "src": ".svelte-kit/build/runtime/internal/start.js",
     "isEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
@@ -19,7 +19,9 @@
       "src/routes/fibonacci.svelte",
       "src/routes/listview/index.svelte",
       "src/routes/settings.svelte",
-      "_index-a7e32281.js",
+      "src/routes/starwars/index.svelte",
+      "_starwarspanel-775b90a2.js",
+      "_index-62fbc0d1.js",
       "src/routes/apidemo/index.svelte",
       "src/routes/apidemo/[lastName].svelte",
       "src/routes/counter/index.svelte",
@@ -33,203 +35,216 @@
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-e07d7b58.js",
+    "file": "pages/__layout.svelte-7e184b06.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "css": [
       "assets/pages/__layout.svelte-7d55c0ac.css"
     ]
   },
   ".svelte-kit/build/components/error.svelte": {
-    "file": "error.svelte-19c23558.js",
+    "file": "error.svelte-6414afa1.js",
     "src": ".svelte-kit/build/components/error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-e2a5864b.js",
+    "file": "pages/index.svelte-add23e51.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "css": [
       "assets/pages/index.svelte-6a899900.css"
     ]
   },
   "src/routes/example-markdown.md": {
-    "file": "pages/example-markdown.md-cab4326d.js",
+    "file": "pages/example-markdown.md-785ce411.js",
     "src": "src/routes/example-markdown.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ]
   },
   "src/routes/fibonaccidoc.md": {
-    "file": "pages/fibonaccidoc.md-0c02f57a.js",
+    "file": "pages/fibonaccidoc.md-91a92562.js",
     "src": "src/routes/fibonaccidoc.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ]
   },
   "src/routes/particlerain.svelte": {
-    "file": "pages/particlerain.svelte-a9e6e2f2.js",
+    "file": "pages/particlerain.svelte-c24a6698.js",
     "src": "src/routes/particlerain.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "css": [
       "assets/pages/particlerain.svelte-f46ffd44.css"
     ]
   },
   "src/routes/audioplayer/index.svelte": {
-    "file": "pages/audioplayer/index.svelte-f7869249.js",
+    "file": "pages/audioplayer/index.svelte-9aa0057f.js",
     "src": "src/routes/audioplayer/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "css": [
       "assets/pages/audioplayer/index.svelte-60b66078.css"
     ]
   },
   "src/routes/listviewdoc.md": {
-    "file": "pages/listviewdoc.md-4c52f2cd.js",
+    "file": "pages/listviewdoc.md-eb010e59.js",
     "src": "src/routes/listviewdoc.md",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ]
   },
   "src/routes/covidstats/index.svelte": {
-    "file": "pages/covidstats/index.svelte-3d90dc19.js",
+    "file": "pages/covidstats/index.svelte-eab56bec.js",
     "src": "src/routes/covidstats/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js",
-      "_list-a9e31b5a.js"
+      "_vendor-1404d6b4.js",
+      "_list-76c573a6.js"
     ],
     "css": [
       "assets/pages/covidstats/index.svelte-eb0598ea.css"
     ]
   },
   "src/routes/fibonacci.svelte": {
-    "file": "pages/fibonacci.svelte-f448facd.js",
+    "file": "pages/fibonacci.svelte-4e91263a.js",
     "src": "src/routes/fibonacci.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "css": [
       "assets/pages/fibonacci.svelte-16b5df49.css"
     ]
   },
   "src/routes/listview/index.svelte": {
-    "file": "pages/listview/index.svelte-89231bbd.js",
+    "file": "pages/listview/index.svelte-576288c4.js",
     "src": "src/routes/listview/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js",
-      "_list-a9e31b5a.js",
-      "_stores-78a7f08e.js"
+      "_vendor-1404d6b4.js",
+      "_list-76c573a6.js",
+      "_stores-98c4fa8f.js"
     ],
     "css": [
       "assets/pages/listview/index.svelte-a212d4bf.css"
     ]
   },
   "src/routes/settings.svelte": {
-    "file": "pages/settings.svelte-9cbcec07.js",
+    "file": "pages/settings.svelte-b654882b.js",
     "src": "src/routes/settings.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
+    ]
+  },
+  "src/routes/starwars/index.svelte": {
+    "file": "pages/starwars/index.svelte-46f06f64.js",
+    "src": "src/routes/starwars/index.svelte",
+    "isEntry": true,
+    "isDynamicEntry": true,
+    "imports": [
+      "_vendor-1404d6b4.js",
+      "_starwarspanel-775b90a2.js",
+      "_list-76c573a6.js",
+      "_tab-a9a519d0.js"
     ]
   },
   "src/routes/pattern.svelte": {
-    "file": "pages/pattern.svelte-2f788637.js",
+    "file": "pages/pattern.svelte-8f53ef1b.js",
     "src": "src/routes/pattern.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "css": [
       "assets/pages/pattern.svelte-ec6175e4.css"
     ]
   },
   "src/routes/apidemo/index.svelte": {
-    "file": "pages/apidemo/index.svelte-48fe60fa.js",
+    "file": "pages/apidemo/index.svelte-9c47c61e.js",
     "src": "src/routes/apidemo/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "css": [
       "assets/pages/apidemo/index.svelte-1ff651ee.css"
     ]
   },
   "src/routes/apidemo/[lastName].svelte": {
-    "file": "pages/apidemo/[lastName].svelte-b9570562.js",
+    "file": "pages/apidemo/[lastName].svelte-48d6bcc4.js",
     "src": "src/routes/apidemo/[lastName].svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "css": [
       "assets/pages/apidemo/[lastName].svelte-b1dad7d8.css"
     ]
   },
   "src/routes/counter/index.svelte": {
-    "file": "pages/counter/index.svelte-244c6587.js",
+    "file": "pages/counter/index.svelte-6b2d3f89.js",
     "src": "src/routes/counter/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js",
-      "_stores-78a7f08e.js"
+      "_vendor-1404d6b4.js",
+      "_stores-98c4fa8f.js"
     ],
     "css": [
       "assets/pages/counter/index.svelte-dbcfad1d.css"
     ]
   },
   "src/routes/dynamic/index.svelte": {
-    "file": "pages/dynamic/index.svelte-26e4d33c.js",
+    "file": "pages/dynamic/index.svelte-8f9192fa.js",
     "src": "src/routes/dynamic/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ]
   },
   "src/routes/tabdemo/index.svelte": {
-    "file": "pages/tabdemo/index.svelte-fd4e9108.js",
+    "file": "pages/tabdemo/index.svelte-a1470b7d.js",
     "src": "src/routes/tabdemo/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js",
-      "_index-a7e32281.js",
+      "_vendor-1404d6b4.js",
+      "_tab-a9a519d0.js",
+      "_index-62fbc0d1.js",
       "src/routes/listviewdoc.md",
       "src/routes/particlerain.svelte",
       "src/routes/fibonacci.svelte",
@@ -237,32 +252,41 @@
       "src/routes/pattern.svelte",
       "src/routes/audioplayer/index.svelte",
       "src/routes/example-markdown.md",
-      "_list-a9e31b5a.js"
+      "_list-76c573a6.js"
     ],
     "css": [
-      "assets/pages/tabdemo/index.svelte-5920d885.css",
       "assets/about.svelte_svelte&type=style&lang-42f179f3.css"
     ]
   },
   "src/routes/about.svelte": {
-    "file": "pages/about.svelte-bff5dea8.js",
+    "file": "pages/about.svelte-4968a293.js",
     "src": "src/routes/about.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "css": [
       "assets/about.svelte_svelte&type=style&lang-42f179f3.css"
     ]
   },
+  "src/routes/starwars/starwarspanel.svelte": {
+    "file": "pages/starwars/starwarspanel.svelte-be48a5c9.js",
+    "src": "src/routes/starwars/starwarspanel.svelte",
+    "isEntry": true,
+    "imports": [
+      "_vendor-1404d6b4.js",
+      "_list-76c573a6.js",
+      "_starwarspanel-775b90a2.js"
+    ]
+  },
   "src/routes/treedemo/index.svelte": {
-    "file": "pages/treedemo/index.svelte-7e48b137.js",
+    "file": "pages/treedemo/index.svelte-6aca0cc6.js",
     "src": "src/routes/treedemo/index.svelte",
     "isEntry": true,
     "imports": [
-      "_vendor-15d19e34.js",
-      "_index-a7e32281.js",
+      "_vendor-1404d6b4.js",
+      "_index-62fbc0d1.js",
       "src/routes/particlerain.svelte",
       "src/routes/example-markdown.md",
       "src/routes/pattern.svelte",
@@ -273,29 +297,49 @@
       "assets/about.svelte_svelte&type=style&lang-42f179f3.css"
     ]
   },
-  "_vendor-15d19e34.js": {
-    "file": "chunks/vendor-15d19e34.js"
+  "_vendor-1404d6b4.js": {
+    "file": "chunks/vendor-1404d6b4.js"
   },
-  "_list-a9e31b5a.js": {
-    "file": "chunks/list-a9e31b5a.js",
+  "_list-76c573a6.js": {
+    "file": "chunks/list-76c573a6.js",
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ],
     "css": [
       "assets/list-388239ef.css"
     ]
   },
-  "_stores-78a7f08e.js": {
-    "file": "chunks/stores-78a7f08e.js",
+  "_stores-98c4fa8f.js": {
+    "file": "chunks/stores-98c4fa8f.js",
     "imports": [
-      "_vendor-15d19e34.js"
+      "_vendor-1404d6b4.js"
     ]
   },
-  "_index-a7e32281.js": {
-    "file": "chunks/index-a7e32281.js",
+  "_starwarspanel-775b90a2.js": {
+    "file": "chunks/starwarspanel-775b90a2.js",
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-15d19e34.js",
+      "_vendor-1404d6b4.js",
+      "_list-76c573a6.js"
+    ],
+    "css": [
+      "assets/starwarspanel-3c3053d9.css"
+    ]
+  },
+  "_tab-a9a519d0.js": {
+    "file": "chunks/tab-a9a519d0.js",
+    "imports": [
+      "_vendor-1404d6b4.js"
+    ],
+    "css": [
+      "assets/tab-542df137.css"
+    ]
+  },
+  "_index-62fbc0d1.js": {
+    "file": "chunks/index-62fbc0d1.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "_vendor-1404d6b4.js",
       "src/routes/particlerain.svelte",
       "src/routes/example-markdown.md",
       "src/routes/pattern.svelte",
