--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
 	},
 	"dependencies": {
 		"@types/d3-scale-chromatic": "^2.0.0",
+		"automap-js": "^1.0.2",
 		"d3-geo": "^2.0.1",
 		"d3-scale-chromatic": "^2.0.0",
-		"netlify-cli": "^8.0.14",
+		"netlify-cli": "^1.2.3",
 		"numeral": "^2.0.6",
 		"svelte-canvas": "^0.6.1",
+		"swapi-node": "^0.7.0",
 		"topojson-client": "^3.1.0"
 	}
 }
